finished script for converting genepop file to csv

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2270,13 +2270,13 @@
     "\n",
     "I had a chat with Lorenz, Brent, and Molly this week that resteered my bioinformatics plan a bit. First, Lorenz pointed out that running through the bioinformatics for population structure shouldn't be that different than finding loci for Molly's parentage panel. Lorenz suggested that I rerun ``populations`` a second time, keeping loci that occur in 75% or more of individuals, in all populations. He also said to not filter for biallelic loci, and also to filter for a minor allele frequency of .02. He also said that I should go forward with a few ways of visualizing my data before deciding a course of action, and these included checking for HWE at each locus and looking at FIS distribution to try to weed out things like paralogous genes.\n",
     "\n",
-    "This reorganization means I should probably name some files differently. So I'm going to lump all the ``populations`` output that I had into a new folder, and put the date that I ran it on. And I'm also going to rename the poorly named  ``pstacks`` folder as ``Stacks-2`` for the second round of Stacks after we've made our de novo reference \"genome.\" And we're going to start calling this batch 101\n",
+    "This reorganization means I should probably name some files differently. So I'm going to lump all the ``populations`` output that I had into a new folder, and put the date that I ran it on. And I'm also going to rename the poorly named  ``pstacks`` folder as ``Stacks-2`` for the second round of Stacks after we've made our de novo reference \"genome.\" \n",
     "\n",
-    "Batch 101 - After Lorenz and I chatted and he pointed out I could be less stringent about my ``populations`` parameters. Batch number of previous files in this iteration of the pipeline is 100.\n",
+    "I'm going to keep everything together in a folder with the date I ran ``populations`` because I can't rename the batch number apparently (it looks for a catalog with that name).\n",
     "\n",
     "## ``Populations`` Round 2, take 2\n",
     "\n",
-    "Going to use a -p of 3 because I want to make sure the loci are in at least about half of the populations, and an -r of .75 is what Lorenz suggested. I think I could even go a little lower if need be."
+    "Going to use a -p of 5 because Lorenz told me to, and an -r of .75 is what Lorenz suggested. I think I could even go a little lower if need be."
    ]
   },
   {
@@ -2302,11 +2302,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2316,7 +2317,7 @@
       "Fst kernel smoothing: off\n",
       "Bootstrap resampling: off\n",
       "Percent samples limit per population: 0.75\n",
-      "Locus Population limit: 3\n",
+      "Locus Population limit: 5\n",
       "Minimum stack depth: 10\n",
       "Log liklihood filtering: off; threshold: 0\n",
       "Minor allele frequency cutoff: 0\n",
@@ -2332,13 +2333,224 @@
       "    CA_Catalina: Q330, Q332, Q334, Q338, Q339, Q347, Q351, Q352, Q353, Q354, Q355, Q356\n",
       "  1 group of populations found\n",
       "    1: WA_Strait, WA_SanJuans, WA_Dabob, AK, CA_Catalina\n",
-      " Unable to open '../Stacks_2/batch_101.catalog'\n",
-      "Unable to load the catalog '../Stacks_2/batch_101.catalog'\n"
+      "  Parsing ../Stacks_2/batch_100.catalog.tags.tsv\n",
+      "  Parsing ../Stacks_2/batch_100.catalog.snps.tsv\n",
+      "  Parsing ../Stacks_2/batch_100.catalog.alleles.tsv\n",
+      "  Parsing ../Stacks_2/FG001.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG002.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG003.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG004.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG005.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG006.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG007.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG009.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG010.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG011.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG013.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG014.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG015.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG016.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG017.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG018.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG019.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG021.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG024.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG026.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG027.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG031.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG032.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG033.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG034.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG035.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG100_A.matches.tsv\n",
+      "Warning: unable to find any matches in file 'FG100_A', excluding this sample from population analysis.\n",
+      "  Parsing ../Stacks_2/FG100_B.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG101_A.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG101_B.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG102_A.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG102_B.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG103_A.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG103_B.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG104_A.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG104_B.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG106.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG107.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG108.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG109.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG111.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG201.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG202.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG203.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG204.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG205.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG206.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG207.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG209.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG210.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG211.matches.tsv\n",
+      "  Parsing ../Stacks_2/FG212.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q314.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q316.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q318.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q323.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q324.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q325.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q326.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q330.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q332.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q334.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q338.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q339.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q347.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q351.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q352.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q353.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q354.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q355.matches.tsv\n",
+      "  Parsing ../Stacks_2/Q356.matches.tsv\n",
+      "Populating observed haplotypes for 70 samples, 27460 loci.\n",
+      "Removed 90 samples from loci that are below the minimum stack depth of 10x\n",
+      "Removing 19710 loci that did not pass sample/population constraints... retained 7750 loci.\n",
+      "Loading model outputs for 70 samples, 7750 loci.\n",
+      "  Parsing ../Stacks_2/FG001.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG002.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG003.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG004.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG005.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG006.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG007.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG009.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG010.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG011.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG013.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG014.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG015.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG016.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG017.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG018.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG019.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG021.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG024.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG026.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG027.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG031.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG032.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG033.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG034.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG035.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG100_B.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG101_A.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG101_B.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG102_A.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG102_B.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG103_A.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG103_B.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG104_A.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG104_B.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG106.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG107.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG108.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG109.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG111.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG201.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG202.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG203.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG204.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG205.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG206.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG207.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG209.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG210.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG211.tags.tsv\n",
+      "  Parsing ../Stacks_2/FG212.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q314.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q316.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q318.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q323.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q324.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q325.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q326.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q330.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q332.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q334.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q338.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q339.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q347.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q351.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q352.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q353.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q354.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q355.tags.tsv\n",
+      "  Parsing ../Stacks_2/Q356.tags.tsv\n",
+      "Generating nucleotide-level summary statistics for population 'WA_Strait'\n",
+      "Population 'WA_Strait' contained 1123 incompatible loci -- more than two alleles present.\n",
+      "Generating nucleotide-level summary statistics for population 'WA_SanJuans'\n",
+      "Population 'WA_SanJuans' contained 760 incompatible loci -- more than two alleles present.\n",
+      "Generating nucleotide-level summary statistics for population 'WA_Dabob'\n",
+      "Population 'WA_Dabob' contained 762 incompatible loci -- more than two alleles present.\n",
+      "Generating nucleotide-level summary statistics for population 'AK'\n",
+      "Population 'AK' contained 430 incompatible loci -- more than two alleles present.\n",
+      "Generating nucleotide-level summary statistics for population 'CA_Catalina'\n",
+      "Population 'CA_Catalina' contained 723 incompatible loci -- more than two alleles present.\n",
+      "Tallying loci across populations...done.\n",
+      "Pruned 2343 variant sites due to filter constraints.\n",
+      "  (enable the --verbose flag to record the reason why each site was filtered in the batch_X.populations.log file.)\n",
+      "Removing 1 additional loci for which all variant sites were filtered... retained 7749 loci.\n",
+      "Regenerating nucleotide-level summary statistics for population 'WA_Strait'\n",
+      "Population 'WA_Strait' contained 0 incompatible loci -- more than two alleles present.\n",
+      "Regenerating nucleotide-level summary statistics for population 'WA_SanJuans'\n",
+      "Population 'WA_SanJuans' contained 0 incompatible loci -- more than two alleles present.\n",
+      "Regenerating nucleotide-level summary statistics for population 'WA_Dabob'\n",
+      "Population 'WA_Dabob' contained 0 incompatible loci -- more than two alleles present.\n",
+      "Regenerating nucleotide-level summary statistics for population 'AK'\n",
+      "Population 'AK' contained 0 incompatible loci -- more than two alleles present.\n",
+      "Regenerating nucleotide-level summary statistics for population 'CA_Catalina'\n",
+      "Population 'CA_Catalina' contained 0 incompatible loci -- more than two alleles present.\n",
+      "Re-tallying loci across populations...done.\n",
+      "Generating haplotype-level summary statistics for population 'WA_Strait'\n",
+      "Generating haplotype-level summary statistics for population 'WA_SanJuans'\n",
+      "Generating haplotype-level summary statistics for population 'WA_Dabob'\n",
+      "Generating haplotype-level summary statistics for population 'AK'\n",
+      "Generating haplotype-level summary statistics for population 'CA_Catalina'\n",
+      "Writing 7749 loci to summary statistics file, '../Stacks_2/batch_100.sumstats.tsv'\n",
+      "Writing 7749 loci to observed haplotype file, '../Stacks_2/batch_100.haplotypes.tsv'\n",
+      "Writing population data to GenePop file '../Stacks_2/batch_100.genepop'\n"
      ]
     }
    ],
    "source": [
-    "!stacks populations -b 101 -P ../Stacks_2 -M ../popmap_cragigrun1.txt -t 10 -r .75 -p 3 -m 10 --genepop"
+    "!stacks populations -b 100 -P ../Stacks_2 -M ../popmap_cragigrun1.txt -t 10 -r .75 -p 5 -m 10 --genepop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reformat Genepop file\n",
+    "\n",
+    "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for MAF. Then, I'll do some filtering for missing values stuff, and then try to make a DAPC.\n",
+    "\n",
+    "Mary gave me some pro tips on how to make a \"genepop\" file a la Eleni.\n",
+    "\n",
+    "- make it a CSV\n",
+    "- sample names are column headers\n",
+    "- loci listed down column 1\n",
+    "- genotypes in cells\n",
+    "- cell [1,1] says \"sample\"\n",
+    "\n",
+    "Because I'm skipping some steps, I need to write a script that takes a genepop file out of ``populations`` and reformats it to work with Eleni's scripts.\n",
+    "\n",
+    "Made script, link to script here, link to notebook here.\n",
+    "\n",
+    "Call looked like:\n",
+    "\n",
+    "```\n",
+    "nclowell@ubuntu:/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts$ python pop_gp_to_csv_gp.py -i ../../../WorkingFolder/Stacks_2/batch_100.genepop -o newformat.txt\n",
+    "```\n",
+    "\n",
+    "Now, to run Eleni's MAF script!\n",
+    "\n",
+    "## Filter for MAF"
    ]
   },
   {
