--- a/CRAGIG_run1/Notebooks/reformat genepop for MAF filtering script.ipynb
+++ b/CRAGIG_run1/Notebooks/reformat genepop for MAF filtering script.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "G\n",
+    "## ``populations`` genepop file to genepop-like CSV file for filtering steps\n",
     "\n",
     "This script takes a genepop file straight out of ``populations`` and reformats so that it can be fed into our lab's post Stacks filtering scripts. More specifically, it makes a CSV file where the sample names are column headers, the loci are listed down column 1, genotypes are in the rest of the cells, and cell [1,1] says \"sample.\"\n",
-    "\n"
+    "\n",
+    "Click [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/pop_gp_to_csv_gp.py) for a link to the script.\n"
    ]
   },
   {
