updated notebook, added plot of num alleles per locus

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -1662,7 +1662,7 @@
     "## Second ``populations``\n",
     "\n",
     "``\n",
-    "stacks populations -b 100 -P Stacks -M popmap_cragigrun1.txt -t 10 -r 1 -p 5 -m 5 --genepop\n",
+    "stacks populations -b 100 -P Stacks_2 -M popmap_cragigrun1.txt -t 10 -r 1 -p 5 -m 5 --genepop\n",
     "``\n"
    ]
   },
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2292,7 +2292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks-2\n"
+      "/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks_2\n"
      ]
     }
    ],
@@ -2526,6 +2526,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How many loci remained after this second round of ``populations``?\n",
+    "\n",
+    "Use code:\n",
+    "\n",
+    "``python count_loci_genepop.py Stacks/batch_100.genepop``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your genepop file has 82265 columns of genotypes.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python count_loci_genepop.py Stacks_2/batch_100.genepop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "## Reformat Genepop file\n",
     "\n",
     "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for MAF. Then, I'll do some filtering for missing values stuff, and then try to make a DAPC.\n",
@@ -2554,13 +2587,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "20170309\n",
+    "\n",
+    "as a quick diversion, using the output of ``populations`` round 2, trying to test for HWE at each locus. ran HWE exact test, probability option, yes to enumeration.\n",
+    "\n",
+    "output file"
+   ]
   }
  ],
  "metadata": {
