updated short notebook showing use of alleles per locus plot script

--- a/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
+++ b/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -41,8 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 6, 12, 6, 32, 6, 5, 5, 8, 11, 11, 12, 12, 10, 5, 18, 13, 15]\n",
-      "<matplotlib.figure.Figure at 0x7f88dc3a0dd0>\n"
+      "<matplotlib.figure.Figure at 0x7f8db8b70dd0>\r\n"
      ]
     }
    ],
