updated script for making alleles per locus plot

--- a/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
+++ b/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20170313 Natalie Lowell\n",
+    "**20170313**\n",
     "\n",
     "I wrote a script that takes a catalogs.allele file.tsv from ``Stacks`` as an argument, and makes a histogram of the number of alleles per locus. The script lives [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/alleles_per_locus_cat.py).\n",
     "\n",
@@ -48,6 +48,15 @@
    "source": [
     "!python alleles_per_locus_cat.py \\\n",
     "-c ../../../WorkingFolder/Stacks_2/batch_100.catalog.alleles.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The image won't load within the ipython notebook if I run it from a python script, or at least I haven't figured out how to view it, so here's the figure:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dist_num_alleles_incatalog.png?raw=true)"
    ]
   },
   {
