added working filter for missing vals script

--- a/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
+++ b/CRAGIG_run1/Notebooks/Plot num alleles per locus from catalog file.ipynb
@@ -32,16 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<matplotlib.figure.Figure at 0x7f8db8b70dd0>\r\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-a9b8ffd15695>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-a9b8ffd15695>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    -t \"Distribution\"\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
