--- a/CRAGIG_run1/Notebooks/filter for missing values.ipynb
+++ b/CRAGIG_run1/Notebooks/filter for missing values.ipynb
@@ -4,12 +4,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20170313\n",
+    "**20170313**\n",
     "\n",
     "This script takes a transposed genepop file CSV, the population map from ``Stacks``, a string for the name of the file to store kept loci, a string for the name of the file to store lost loci, and a floating point number for the threshold to filter missing values. Then, it filters out loci where the missing value frequency hits the threshold or goes above the threshold in any population. It produces two text files that store kept and lost loci respectively. Lastly it reports back the number of kept and lost loci.\n",
     "\n",
-    "This script is based off of Eleni's script for filtering based on missing values. I changed it so that it uses the ``Stacks`` population map"
+    "This script is based off of Eleni's script for filtering based on missing values. I changed it so that it uses the ``Stacks`` population map to get the indeces of each population in the transposed CSV.\n",
+    "\n",
+    "Example usage:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This script filtered out 23046 loci, out of a total of 82264 loci.\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"filter_missval.py\", line 100, in <module>\r\n",
+      "    print \"Your keptloci file should have \" + str(kept_count) + \" loci, and your lostloci file should have \" + str(lost_loci) + \" loci.\"\r\n",
+      "NameError: name 'lost_loci' is not defined\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python filter_missval.py \\\n",
+    "-g ../../../WorkingFolder/transposed_genepop.csv \\\n",
+    "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
+    "-k ../../../WorkingFolder/Stacks_2/keptloci_20170313.txt \\\n",
+    "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.txt \\\n",
+    "-t .5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
