--- a/CRAGIG_run1/Notebooks/filter for missing values.ipynb
+++ b/CRAGIG_run1/Notebooks/filter for missing values.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -43,11 +43,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\r\n",
       "This script filtered out 23046 loci, out of a total of 82264 loci.\r\n",
-      "Traceback (most recent call last):\r\n",
-      "  File \"filter_missval.py\", line 100, in <module>\r\n",
-      "    print \"Your keptloci file should have \" + str(kept_count) + \" loci, and your lostloci file should have \" + str(lost_loci) + \" loci.\"\r\n",
-      "NameError: name 'lost_loci' is not defined\r\n"
+      "\r\n",
+      "Your keptloci file should have 59218 loci, and your lostloci file should have 23046 loci.\r\n",
+      "\r\n",
+      "You retained 71.9% of your loci after filtering for missing values.\r\n"
      ]
     }
    ],
@@ -59,15 +60,6 @@
     "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.txt \\\n",
     "-t .5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
