--- a/CRAGIG_run1/Notebooks/filter for missing values.ipynb
+++ b/CRAGIG_run1/Notebooks/filter for missing values.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**20170313**\n",
     "\n",
@@ -15,9 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -34,9 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -44,11 +51,11 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "This script filtered out 23046 loci, out of a total of 82264 loci.\r\n",
+      "This script filtered out 11035 loci, out of a total of 82264 loci.\r\n",
       "\r\n",
-      "Your keptloci file should have 59218 loci, and your lostloci file should have 23046 loci.\r\n",
+      "Your keptloci file should have 71229 loci, and your lostloci file should have 11035 loci.\r\n",
       "\r\n",
-      "You retained 71.9% of your loci after filtering for missing values.\r\n"
+      "You retained 86.5% of your loci after filtering for missing values.\r\n"
      ]
     }
    ],
@@ -58,8 +65,17 @@
     "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
     "-k ../../../WorkingFolder/Stacks_2/keptloci_20170313.txt \\\n",
     "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.txt \\\n",
-    "-t .5"
+    "-t .2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
