deleted extraneous scripts and updated notebook

--- a/CRAGIG_run1/Notebooks/filter for missing values.ipynb
+++ b/CRAGIG_run1/Notebooks/filter for missing values.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "This script is based off of Eleni's script for filtering based on missing values. I changed it so that it uses the ``Stacks`` population map to get the indeces of each population in the transposed CSV.\n",
     "\n",
+    "The script lives [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filter_missval.py).\n",
+    "\n",
     "Example usage:"
    ]
   },
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -63,8 +65,8 @@
     "!python filter_missval.py \\\n",
     "-g ../../../WorkingFolder/transposed_genepop.csv \\\n",
     "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
-    "-k ../../../WorkingFolder/Stacks_2/keptloci_20170313.txt \\\n",
-    "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.txt \\\n",
+    "-k ../../../WorkingFolder/Stacks_2/keptloci_20170313.csv \\\n",
+    "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.csv \\\n",
     "-t .2"
    ]
   },
