changed names of notebooks to take out spaces

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2524,7 +2524,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "How many loci remained after this second round of ``populations``?\n",
     "\n",
@@ -2537,7 +2540,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2561,7 +2566,7 @@
    "source": [
     "## Reformat Genepop file\n",
     "\n",
-    "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for MAF. Then, I'll do some filtering for missing values stuff, and then try to make a DAPC.\n",
+    "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for missing values and then try to make a DAPC.\n",
     "\n",
     "Mary gave me some pro tips on how to make a \"genepop\" file a la Eleni.\n",
     "\n",
@@ -2573,7 +2578,7 @@
     "\n",
     "Because I'm skipping some steps, I need to write a script that takes a genepop file out of ``populations`` and reformats it to work with Eleni's scripts.\n",
     "\n",
-    "Made script, link to script here, link to notebook here.\n",
+    "Made script, link to [script here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/pop_gp_to_csv_gp.py), link to [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/reformat%20populations%20genepop%20to%20genepop-like%20CSV.ipynb).\n",
     "\n",
     "Call looked like:\n",
     "\n",
@@ -2581,9 +2586,39 @@
     "nclowell@ubuntu:/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts$ python pop_gp_to_csv_gp.py -i ../../../WorkingFolder/Stacks_2/batch_100.genepop -o newformat.txt\n",
     "```\n",
     "\n",
-    "Now, to run Eleni's MAF script!\n",
+    "20170313\n",
     "\n",
-    "## Filter for MAF"
+    "Then I wrote a script that takes this transposed genepop file and the population map, and filters for a particular missing value threshold. I  originally planned on using a cut off of .5, but that filtered out none of my loci. So I changed it to be more conservative, to .2, which is what Mary uses. It filtered out 86.5 percent of my loci.\n",
+    "\n",
+    "The call looked like:\n",
+    "\n",
+    "```\n",
+    "!python filter_missval.py \\\n",
+    "-g ../../../WorkingFolder/transposed_genepop.csv \\\n",
+    "-p ../../../WorkingFolder/popmap_cragigrun1.txt \\\n",
+    "-k ../../../WorkingFolder/Stacks_2/keptloci_20170313.csv \\\n",
+    "-l ../../../WorkingFolder/Stacks_2/lostloci_20170313.csv \\\n",
+    "-t .2\n",
+    "```\n",
+    "\n",
+    "And the output looked like:\n",
+    "``This script filtered out 11035 loci, out of a total of 82264 loci.\n",
+    "\n",
+    "Your keptloci file should have 71229 loci, and your lostloci file should have 11035 loci.\n",
+    "\n",
+    "You retained 86.5 percent of your loci after filtering for missing values.```\n",
+    "\n",
+    "\n",
+    "Here's the [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/filter%20for%20missing%20values.ipynb).\n",
+    "\n",
+    "And [here's the script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filter_missval.py).\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Then I wrote a script that takes these filtered loci and writes them back to a regular genepop file, so I can try to make a DAPC and process it in Genepop for HWE.\n",
+    "\n",
+    "Here's the notebook"
    ]
   },
   {
