added notebook for converting transpo csv back to genepop format

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2564,7 +2564,7 @@
     "editable": true
    },
    "source": [
-    "## Reformat Genepop file\n",
+    "## Reformat Genepop file to transposed CSV\n",
     "\n",
     "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for missing values and then try to make a DAPC.\n",
     "\n",
@@ -2578,15 +2578,15 @@
     "\n",
     "Because I'm skipping some steps, I need to write a script that takes a genepop file out of ``populations`` and reformats it to work with Eleni's scripts.\n",
     "\n",
-    "Made script, link to [script here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/pop_gp_to_csv_gp.py), link to [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/reformat%20populations%20genepop%20to%20genepop-like%20CSV.ipynb).\n",
+    "Made script, link to [script here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/pop_gp_to_csv_gp.py), link to [notebook here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/reformat_populations_genepop_to_genepop-like_CSV.ipynb).\n",
     "\n",
     "Call looked like:\n",
     "\n",
-    "```\n",
-    "nclowell@ubuntu:/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts$ python pop_gp_to_csv_gp.py -i ../../../WorkingFolder/Stacks_2/batch_100.genepop -o newformat.txt\n",
-    "```\n",
+    "``python pop_gp_to_csv_gp.py -i ../../../WorkingFolder/Stacks_2/batch_100.genepop -o newformat.txt``\n",
     "\n",
-    "20170313\n",
+    "## Filtering for missing values\n",
+    "\n",
+    "**20170313**\n",
     "\n",
     "Then I wrote a script that takes this transposed genepop file and the population map, and filters for a particular missing value threshold. I  originally planned on using a cut off of .5, but that filtered out none of my loci. So I changed it to be more conservative, to .2, which is what Mary uses. It filtered out 86.5 percent of my loci.\n",
     "\n",
@@ -2606,15 +2606,14 @@
     "\n",
     "Your keptloci file should have 71229 loci, and your lostloci file should have 11035 loci.\n",
     "\n",
-    "You retained 86.5 percent of your loci after filtering for missing values.```\n",
+    "You retained 86.5 percent of your loci after filtering for missing values.``\n",
     "\n",
     "\n",
-    "Here's the [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/filter%20for%20missing%20values.ipynb).\n",
+    "Here's the [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/filter_for_missing_values.ipynb).\n",
     "\n",
     "And [here's the script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filter_missval.py).\n",
     "\n",
-    "\n",
-    "\n",
+    "## Convert back to Genepop\n",
     "\n",
     "Then I wrote a script that takes these filtered loci and writes them back to a regular genepop file, so I can try to make a DAPC and process it in Genepop for HWE.\n",
     "\n",
@@ -2628,14 +2627,7 @@
     "deletable": true,
     "editable": true
    },
-   "source": [
-    "---\n",
-    "20170309\n",
-    "\n",
-    "as a quick diversion, using the output of ``populations`` round 2, trying to test for HWE at each locus. ran HWE exact test, probability option, yes to enumeration.\n",
-    "\n",
-    "output file"
-   ]
+   "source": []
   }
  ],
  "metadata": {
