added prelim dapc plot, updated notebook

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2564,6 +2564,8 @@
     "editable": true
    },
    "source": [
+    "There must be some issue because my genepop file has more than my cleaned catalog made with my \"reference genome,\" so I'll need to go back and check to see where the error is. I've gone through my files and records, and chatted with everyone, and really can't figure it out. So I spent some time writing the scripts for the following steps and familiarizing myself with those steps, here below. I think the wisest next step is to rerun the pipeline, maybe even from the start. Yikes.\n",
+    "\n",
     "## Reformat Genepop file to transposed CSV\n",
     "\n",
     "I'm skipping a couple of the steps that most of our lab mates working on finfish use, so I'm jumping straight from ``populations`` round 2 to filter for missing values and then try to make a DAPC.\n",
@@ -2617,7 +2619,11 @@
     "\n",
     "Then I wrote a script that takes these filtered loci and writes them back to a regular genepop file, so I can try to make a DAPC and process it in Genepop for HWE.\n",
     "\n",
-    "Here's the notebook"
+    "Here's the [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/transposed_CSV_back_to_genepop.ipynb)\n",
+    "and here's the [script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/transpo_csv_to_genepop.py).\n",
+    "\n",
+    "\n",
+    "I ran a DAPC scr"
    ]
   },
   {
