--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2622,8 +2622,11 @@
     "Here's the [notebook](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/transposed_CSV_back_to_genepop.ipynb)\n",
     "and here's the [script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/transpo_csv_to_genepop.py).\n",
     "\n",
+    "## DAPC\n",
     "\n",
-    "I ran a DAPC scr"
+    "I ran a DAPC script from Charlie and Eleni to make a preliminary plot. The script lives [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_DAPC_20170313.R) and the plot looked like this:\n",
+    "\n",
+    "![image]()"
    ]
   },
   {
