--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2564,6 +2564,8 @@
     "editable": true
    },
    "source": [
+    "**20170313**\n",
+    "\n",
     "There must be some issue because my genepop file has more than my cleaned catalog made with my \"reference genome,\" so I'll need to go back and check to see where the error is. I've gone through my files and records, and chatted with everyone, and really can't figure it out. So I spent some time writing the scripts for the following steps and familiarizing myself with those steps, here below. I think the wisest next step is to rerun the pipeline, maybe even from the start. Yikes.\n",
     "\n",
     "## Reformat Genepop file to transposed CSV\n",
@@ -2624,18 +2626,25 @@
     "\n",
     "## DAPC\n",
     "\n",
+    "**20170313**\n",
+    "\n",
     "I ran a DAPC script from Charlie and Eleni to make a preliminary plot. The script lives [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_DAPC_20170313.R) and the plot looked like this:\n",
     "\n",
-    "![image]()"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dapc_20170313.png?raw=true)\n",
+    "\n",
+    "Where:\n",
+    "- WA1 = Sekiu\n",
+    "- WA2 = San Juans\n",
+    "- WA3 = Dabob"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
+   "outputs": [],
    "source": []
   }
  ],
